--- a/src/styles/scss/_master.scss
+++ b/src/styles/scss/_master.scss
@@ -1,9 +1,16 @@
+@use './constants';
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif;
+  outline-width: 0;
+}
+
+body {
+  background-color: constants.$color-blue;
 }
 
 .page {
@@ -19,4 +26,6 @@
   font-family: 'Roboto Slab', serif;
   font-size: 4em;
   margin: 0.5em auto;
+  color: white;
+  margin: 1em auto;
 }
