--- a/src/styles/scss/_constants.scss
+++ b/src/styles/scss/_constants.scss
@@ -1,4 +1,4 @@
-$color-green: rgb(3, 177, 3);
+$color-green: #43970b;
 $color-grey: grey;
 $color-blue: rgb(4, 37, 80);
 $color-lightblue: lighten($color-blue, 5%);
